--- a/style.css
+++ b/style.css
@@ -22,3 +22,14 @@ background: -webkit-linear-gradient(45deg, #f09433 0%,#e6683c 25%,#dc2743 50%,#c
 background: linear-gradient(45deg, #f09433 0%,#e6683c 25%,#dc2743 50%,#cc2366 75%,#bc1888 100%); 
 filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#f09433', endColorstr='#bc1888',GradientType=1 );
 }
+#getLocation{
+	position: absolute;
+	bottom: 4%;
+	left: 5%;
+	transform: translate(-95%, 0);
+}
+#cords{
+	position: absolute;
+	right: 5%;
+	top: 10%;
+}
