--- a/style.css
+++ b/style.css
@@ -3,6 +3,33 @@ html,body{
 	margin:0;
 }
 #map{
-	height: 100%;
+	height: 91%;
 	margin: 0;
+}
+#mediaMenu{
+	position: absolute;
+	bottom: 4%;
+	left: 50%;
+    transform: translate(-50%, 0);
+}
+#logo{
+	font-family: 'Raleway', sans-serif;
+}
+#insta{
+	background: : #f09433; 
+background: -moz-linear-gradient(45deg, #f09433 0%, #e6683c 25%, #dc2743 50%, #cc2366 75%, #bc1888 100%); 
+background: -webkit-linear-gradient(45deg, #f09433 0%,#e6683c 25%,#dc2743 50%,#cc2366 75%,#bc1888 100%); 
+background: linear-gradient(45deg, #f09433 0%,#e6683c 25%,#dc2743 50%,#cc2366 75%,#bc1888 100%); 
+filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#f09433', endColorstr='#bc1888',GradientType=1 );
+}
+#getLocation{
+	position: absolute;
+	bottom: 4%;
+	left: 5%;
+	transform: translate(-95%, 0);
+}
+#cords{
+	position: absolute;
+	right: 5%;
+	top: 10%;
 }
